// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`add fund 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="Funds"
      >
        <table
          class="table"
        >
          <thead>
            <tr>
              <th>
                Fund Name
              </th>
              <th>
                Balance
              </th>
              <th>
                <div
                  class="btn-toolbar"
                  role="toolbar"
                >
                  <button
                    class="btn btn-default"
                    type="button"
                  >
                    Add
                  </button>
                </div>
              </th>
            </tr>
            <tr>
              <td>
                Woo
              </td>
              <td>
                0
              </td>
              <td>
                <div
                  class="btn-toolbar"
                  role="toolbar"
                >
                  <button
                    class="btn btn-danger"
                    type="button"
                  >
                    Delete
                  </button>
                </div>
              </td>
            </tr>
          </thead>
        </table>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="Funds"
    >
      <table
        class="table"
      >
        <thead>
          <tr>
            <th>
              Fund Name
            </th>
            <th>
              Balance
            </th>
            <th>
              <div
                class="btn-toolbar"
                role="toolbar"
              >
                <button
                  class="btn btn-default"
                  type="button"
                >
                  Add
                </button>
              </div>
            </th>
          </tr>
          <tr>
            <td>
              Woo
            </td>
            <td>
              0
            </td>
            <td>
              <div
                class="btn-toolbar"
                role="toolbar"
              >
                <button
                  class="btn btn-danger"
                  type="button"
                >
                  Delete
                </button>
              </div>
            </td>
          </tr>
        </thead>
      </table>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`add fund 2`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="Funds"
      >
        <table
          class="table"
        >
          <thead>
            <tr>
              <th>
                Fund Name
              </th>
              <th>
                Balance
              </th>
              <th>
                <div
                  class="btn-toolbar"
                  role="toolbar"
                >
                  <button
                    class="btn btn-default"
                    type="button"
                  >
                    Add
                  </button>
                </div>
              </th>
            </tr>
            <tr>
              <td>
                <form>
                  <input
                    class="form-control"
                    placeholder="Fund name"
                    type="text"
                    value=""
                  />
                </form>
              </td>
              <td>
                <form>
                  <input
                    class="form-control"
                    placeholder="0.00"
                    type="text"
                    value="0"
                  />
                </form>
              </td>
              <td>
                <div
                  class="btn-toolbar"
                  role="toolbar"
                >
                  <button
                    class="btn btn-default"
                    type="button"
                  >
                    Save
                  </button>
                  <button
                    class="btn btn-default"
                    type="button"
                  >
                    Cancel
                  </button>
                </div>
              </td>
            </tr>
            <tr>
              <td>
                Woo
              </td>
              <td>
                0
              </td>
              <td>
                <div
                  class="btn-toolbar"
                  role="toolbar"
                >
                  <button
                    class="btn btn-danger"
                    type="button"
                  >
                    Delete
                  </button>
                </div>
              </td>
            </tr>
          </thead>
        </table>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="Funds"
    >
      <table
        class="table"
      >
        <thead>
          <tr>
            <th>
              Fund Name
            </th>
            <th>
              Balance
            </th>
            <th>
              <div
                class="btn-toolbar"
                role="toolbar"
              >
                <button
                  class="btn btn-default"
                  type="button"
                >
                  Add
                </button>
              </div>
            </th>
          </tr>
          <tr>
            <td>
              <form>
                <input
                  class="form-control"
                  placeholder="Fund name"
                  type="text"
                  value=""
                />
              </form>
            </td>
            <td>
              <form>
                <input
                  class="form-control"
                  placeholder="0.00"
                  type="text"
                  value="0"
                />
              </form>
            </td>
            <td>
              <div
                class="btn-toolbar"
                role="toolbar"
              >
                <button
                  class="btn btn-default"
                  type="button"
                >
                  Save
                </button>
                <button
                  class="btn btn-default"
                  type="button"
                >
                  Cancel
                </button>
              </div>
            </td>
          </tr>
          <tr>
            <td>
              Woo
            </td>
            <td>
              0
            </td>
            <td>
              <div
                class="btn-toolbar"
                role="toolbar"
              >
                <button
                  class="btn btn-danger"
                  type="button"
                >
                  Delete
                </button>
              </div>
            </td>
          </tr>
        </thead>
      </table>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`funds render as a table of names and balances 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="Funds"
      >
        <table
          class="table"
        >
          <thead>
            <tr>
              <th>
                Fund Name
              </th>
              <th>
                Balance
              </th>
              <th>
                <div
                  class="btn-toolbar"
                  role="toolbar"
                >
                  <button
                    class="btn btn-default"
                    type="button"
                  >
                    Add
                  </button>
                </div>
              </th>
            </tr>
            <tr>
              <td>
                Woo
              </td>
              <td>
                0
              </td>
              <td>
                <div
                  class="btn-toolbar"
                  role="toolbar"
                >
                  <button
                    class="btn btn-danger"
                    type="button"
                  >
                    Delete
                  </button>
                </div>
              </td>
            </tr>
            <tr>
              <td>
                Another
              </td>
              <td>
                0
              </td>
              <td>
                <div
                  class="btn-toolbar"
                  role="toolbar"
                >
                  <button
                    class="btn btn-danger"
                    type="button"
                  >
                    Delete
                  </button>
                </div>
              </td>
            </tr>
            <tr>
              <td>
                Oh really?
              </td>
              <td>
                250
              </td>
              <td>
                <div
                  class="btn-toolbar"
                  role="toolbar"
                >
                  <button
                    class="btn btn-danger"
                    type="button"
                  >
                    Delete
                  </button>
                </div>
              </td>
            </tr>
            <tr>
              <td>
                Nick
              </td>
              <td>
                100000
              </td>
              <td>
                <div
                  class="btn-toolbar"
                  role="toolbar"
                >
                  <button
                    class="btn btn-danger"
                    type="button"
                  >
                    Delete
                  </button>
                </div>
              </td>
            </tr>
            <tr>
              <td>
                type a thing
              </td>
              <td>
                0
              </td>
              <td>
                <div
                  class="btn-toolbar"
                  role="toolbar"
                >
                  <button
                    class="btn btn-danger"
                    type="button"
                  >
                    Delete
                  </button>
                </div>
              </td>
            </tr>
            <tr>
              <td>
                yas
              </td>
              <td>
                250
              </td>
              <td>
                <div
                  class="btn-toolbar"
                  role="toolbar"
                >
                  <button
                    class="btn btn-danger"
                    type="button"
                  >
                    Delete
                  </button>
                </div>
              </td>
            </tr>
          </thead>
        </table>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="Funds"
    >
      <table
        class="table"
      >
        <thead>
          <tr>
            <th>
              Fund Name
            </th>
            <th>
              Balance
            </th>
            <th>
              <div
                class="btn-toolbar"
                role="toolbar"
              >
                <button
                  class="btn btn-default"
                  type="button"
                >
                  Add
                </button>
              </div>
            </th>
          </tr>
          <tr>
            <td>
              Woo
            </td>
            <td>
              0
            </td>
            <td>
              <div
                class="btn-toolbar"
                role="toolbar"
              >
                <button
                  class="btn btn-danger"
                  type="button"
                >
                  Delete
                </button>
              </div>
            </td>
          </tr>
          <tr>
            <td>
              Another
            </td>
            <td>
              0
            </td>
            <td>
              <div
                class="btn-toolbar"
                role="toolbar"
              >
                <button
                  class="btn btn-danger"
                  type="button"
                >
                  Delete
                </button>
              </div>
            </td>
          </tr>
          <tr>
            <td>
              Oh really?
            </td>
            <td>
              250
            </td>
            <td>
              <div
                class="btn-toolbar"
                role="toolbar"
              >
                <button
                  class="btn btn-danger"
                  type="button"
                >
                  Delete
                </button>
              </div>
            </td>
          </tr>
          <tr>
            <td>
              Nick
            </td>
            <td>
              100000
            </td>
            <td>
              <div
                class="btn-toolbar"
                role="toolbar"
              >
                <button
                  class="btn btn-danger"
                  type="button"
                >
                  Delete
                </button>
              </div>
            </td>
          </tr>
          <tr>
            <td>
              type a thing
            </td>
            <td>
              0
            </td>
            <td>
              <div
                class="btn-toolbar"
                role="toolbar"
              >
                <button
                  class="btn btn-danger"
                  type="button"
                >
                  Delete
                </button>
              </div>
            </td>
          </tr>
          <tr>
            <td>
              yas
            </td>
            <td>
              250
            </td>
            <td>
              <div
                class="btn-toolbar"
                role="toolbar"
              >
                <button
                  class="btn btn-danger"
                  type="button"
                >
                  Delete
                </button>
              </div>
            </td>
          </tr>
        </thead>
      </table>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
